--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,11 @@
 	background-color:rgb(135, 206, 235);
 }
 
-body > p:nth-child(2) {
+article > p:first-child {
 	background-color:black;
 	color:white;
 }
-body > p:nth-child(5) {
+article > p:last-child {
 	color:red;
 }
 
